Add footer by using wireframe Footer C

--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,15 +1,24 @@
-<div class="container">
-  <div class="grid">
-    <div class="grid-cell--lg-4">
-      <div class="sb-grid-container"></div>
+<div class="footer-grid">
+    <div class="top-footer">
+        <div class="footer-container-grid">
+            <div class="footer-box-1">
+                <p>Community</p>
+            </div>
+            <div class="footer-box-2">
+                <p>Company</p>
+            </div>
+            <div class="footer-logo-box">
+                <p>Community Science Museum</p>
+            </div>
+            <div class="footer-box-3">
+                <p>Help desk</p>
+            </div>
+            <div class="footer-box-4">
+                <p>Blog</p>
+            </div>
+          </div>
     </div>
-    <div class="grid-cell--lg-4">
-      <div class="cb-grid-container">
-        <div class="center__block-1"></div>
-      </div>
+    <div class="bottom-footer">
+        <p class="footer-bottom-box">Community Science Museum</p>
     </div>
-    <div class="grid-cell--lg-4">
-      <div class="grid-container"></div>
-    </div>
-  </div>
 </div>
