--- a/app/src/scss/modules/_navbar.scss
+++ b/app/src/scss/modules/_navbar.scss
@@ -55,11 +55,11 @@
   color: #18a0fb;
   background-color: #ededed;
 }
-.topnav,
+.nav,
 .mdSideNav {
   display: flex;
 }
-.topnav {
+.nav {
   justify-content: flex-end;
   margin: 25px;
   margin-top: -80px;
