--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -44,11 +44,8 @@
   padding: 0;
   margin: 0; }
 
-.box,
-.box-1,
-.box-2,
-.content-box {
-  display: flex; }
+main {
+  flex: 1; }
 
 body {
   font-family: "Comfortaa", "Montserrat", sans-serif;
@@ -62,6 +59,12 @@ a,
 ul,
 li {
   list-style-type: none; }
+
+.box,
+.box-1,
+.box-2,
+.content-box {
+  display: flex; }
 
 .txtSideNav {
   color: #0b3d5e;
@@ -113,11 +116,11 @@ li {
   color: #18a0fb;
   background-color: #ededed; }
 
-.topnav,
+.nav,
 .mdSideNav {
   display: flex; }
 
-.topnav {
+.nav {
   justify-content: flex-end;
   margin: 25px;
   margin-top: -80px; }
@@ -134,3 +137,44 @@ li {
 h1 {
   margin-top: 15px;
   font-size: 19px; }
+
+.footer-grid, .footer-container-grid {
+  display: grid; }
+
+.footer-box-1, .footer-box-2, .footer-logo-box, .footer-box-3, .footer-box-4, .footer-bottom-box {
+  text-align: center; }
+
+.footer-grid {
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 25px 0px;
+  grid-template-areas: "top-footer" "bottom-footer"; }
+
+.top-footer {
+  grid-area: top-footer; }
+
+.bottom-footer {
+  grid-area: bottom-footer; }
+
+.footer-container-grid {
+  grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 5px 5px;
+  padding: 15px 15px;
+  border-bottom: solid #000  1px;
+  grid-template-areas: "footer-box-1 footer-box-2 footer-logo-box footer-box-3 footer-box-4"; }
+
+.footer-box-1 {
+  grid-area: footer-box-1; }
+
+.footer-box-2 {
+  grid-area: footer-box-2; }
+
+.footer-logo-box {
+  grid-area: footer-logo-box; }
+
+.footer-box-3 {
+  grid-area: footer-box-3; }
+
+.footer-box-4 {
+  grid-area: footer-box-4; }
