Added update to Footer C

--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -19,6 +19,7 @@
           </div>
     </div>
     <div class="bottom-footer">
+        <div class="footer-border"></div>
         <p class="footer-bottom-box">Community Science Museum</p>
     </div>
 </div>
