--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -49,6 +49,7 @@ main {
 
 body {
   font-family: "Comfortaa", "Montserrat", sans-serif;
+  font-weight: 900;
   margin: 0;
   min-height: 100vh;
   display: flex;
@@ -66,12 +67,19 @@ li {
 .content-box {
   display: flex; }
 
+p, h1 {
+  font-size: 12px; }
+
+@media only screen and (min-width: 1024px) {
+  p, h1 {
+    font-size: 19px; } }
+
 .txtSideNav {
   color: #0b3d5e;
   font-size: 10px; }
 
 .mdSideNav.openSideNav {
-  width: 50%; }
+  width: 80%; }
 
 .mdSideNav.closeSideNav {
   width: 0; }
@@ -122,7 +130,7 @@ li {
 
 .nav {
   justify-content: flex-end;
-  margin: 25px;
+  margin: 10px;
   margin-top: -80px; }
 
 @media only screen and (min-width: 1024px) {
@@ -134,20 +142,31 @@ li {
   margin: 10px;
   height: 65px; }
 
-h1 {
-  margin-top: 15px;
-  font-size: 19px; }
+.box-1 h1 {
+  margin-top: 15px; }
 
 .footer-grid, .footer-container-grid {
-  display: grid; }
+  display: block; }
+  @media only screen and (min-width: 1024px) {
+    .footer-grid, .footer-container-grid {
+      display: grid; } }
 
 .footer-box-1, .footer-box-2, .footer-logo-box, .footer-box-3, .footer-box-4, .footer-bottom-box {
-  text-align: center; }
+  text-align: center;
+  margin: 15px; }
+  @media only screen and (min-width: 1024px) {
+    .footer-box-1, .footer-box-2, .footer-logo-box, .footer-box-3, .footer-box-4, .footer-bottom-box {
+      font-weight: normal; } }
+
+@media only screen and (min-width: 1024px) {
+  .footer-border {
+    border-bottom: solid #000  1px;
+    margin: 0 50px 0 50px; } }
 
 .footer-grid {
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 25px 0px;
+  gap: 5px 0px;
   grid-template-areas: "top-footer" "bottom-footer"; }
 
 .top-footer {
@@ -161,7 +180,6 @@ h1 {
   grid-template-rows: 1fr;
   gap: 5px 5px;
   padding: 15px 15px;
-  border-bottom: solid #000  1px;
   grid-template-areas: "footer-box-1 footer-box-2 footer-logo-box footer-box-3 footer-box-4"; }
 
 .footer-box-1 {
@@ -171,7 +189,11 @@ h1 {
   grid-area: footer-box-2; }
 
 .footer-logo-box {
-  grid-area: footer-logo-box; }
+  display: none; }
+  @media only screen and (min-width: 1024px) {
+    .footer-logo-box {
+      grid-area: footer-logo-box;
+      display: block; } }
 
 .footer-box-3 {
   grid-area: footer-box-3; }
