--- a/app/src/scss/modules/_footer.scss
+++ b/app/src/scss/modules/_footer.scss
@@ -1,15 +1,29 @@
 .footer-grid, .footer-container-grid  {
-    display: grid;
+    display: block;
+    @media #{$screen__l} {
+        display: grid;
+      }
 }
 .footer-box-1, .footer-box-2, .footer-logo-box, .footer-box-3, .footer-box-4, .footer-bottom-box {
     text-align: center;
+    margin: 15px;
+    @media #{$screen__l} {
+        font-weight: normal;
+    }
+}
+@media #{$screen__l} {
+    .footer-border{
+        
+        border-bottom:solid #000  1px;
+        margin: 0 50px 0 50px;
+    }           
 }
 
 
 .footer-grid {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 25px 0px;
+    gap: 5px 0px;
     grid-template-areas:
       "top-footer"
       "bottom-footer";
@@ -20,7 +34,7 @@
     }
   
   .bottom-footer { 
-      grid-area: bottom-footer; 
+      grid-area: bottom-footer;
     }
   
 
@@ -29,7 +43,6 @@
         grid-template-rows: 1fr;
         gap: 5px 5px;
         padding: 15px 15px;
-        border-bottom:solid #000  1px;
         grid-template-areas:
           "footer-box-1 footer-box-2 footer-logo-box footer-box-3 footer-box-4";
       }
@@ -44,7 +57,11 @@
         }
       
       .footer-logo-box { 
-          grid-area: footer-logo-box; 
+            display: none;
+          @media #{$screen__l} {
+            grid-area: footer-logo-box;
+            display: block; 
+          }
         }
       
       .footer-box-3 { 
