Added update to Footer C and added media components

--- a/app/components/header.html
+++ b/app/components/header.html
@@ -4,9 +4,9 @@
         <div class="box-1">
           <a href="/index.html">
             <img
-              src="../media/"
-              alt=""
-              class="logo"
+              src="../media/logo.png"
+              alt="Community Science Museum logo, a C"
+              class="nav-logo"
             />
           </a>
           <h1>Community Science Museum</h1>
