--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -28,6 +28,29 @@
     max-width: 33.33333%; } }
 
 /**
+ * Grid Containers
+ *
+ * This is the root elements 4 Grid Containers object. 
+ * NB! Mobile first 
+ *
+ *
+*/
+.hero-grid-container, .footer-grid {
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr; }
+
+.hero-grid-container {
+  display: grid;
+  gap: 0px 0px; }
+
+.footer-grid {
+  gap: 5px 0px; }
+
+.footer-container-grid {
+  grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+  grid-template-rows: 1fr; }
+
+/**
  * Grid
  *
  * This is the root element of a mediaqueri grid object. 
@@ -67,11 +90,11 @@ li {
 .content-box {
   display: flex; }
 
-p, h1 {
+p, h1, h2, h3 {
   font-size: 12px; }
 
 @media only screen and (min-width: 1024px) {
-  p, h1 {
+  p, h1, h2, h3 {
     font-size: 19px; } }
 
 .txtSideNav {
@@ -145,6 +168,10 @@ p, h1 {
 .box-1 h1 {
   margin-top: 15px; }
 
+.nav-logo {
+  width: 3rem;
+  height: 3rem; }
+
 .footer-grid, .footer-container-grid {
   display: block; }
   @media only screen and (min-width: 1024px) {
@@ -158,14 +185,7 @@ p, h1 {
     .footer-box-1, .footer-box-2, .footer-logo-box, .footer-box-3, .footer-box-4, .footer-bottom-box {
       font-weight: normal; } }
 
-@media only screen and (min-width: 1024px) {
-  .footer-border {
-    border-bottom: solid #000  1px;
-    margin: 0 50px 0 50px; } }
-
 .footer-grid {
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
   gap: 5px 0px;
   grid-template-areas: "top-footer" "bottom-footer"; }
 
@@ -173,11 +193,13 @@ p, h1 {
   grid-area: top-footer; }
 
 .bottom-footer {
-  grid-area: bottom-footer; }
+  grid-area: bottom-footer;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  padding-top: 20px; }
 
 .footer-container-grid {
-  grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
-  grid-template-rows: 1fr;
   gap: 5px 5px;
   padding: 15px 15px;
   grid-template-areas: "footer-box-1 footer-box-2 footer-logo-box footer-box-3 footer-box-4"; }
@@ -200,3 +222,37 @@ p, h1 {
 
 .footer-box-4 {
   grid-area: footer-box-4; }
+
+@media only screen and (min-width: 1024px) {
+  .footer-border {
+    border-top: solid #000  1px;
+    margin: 0 50px 0 50px; } }
+
+.hero-grid-container {
+  grid-template-areas: "hero-box-e-1" "hero-box-e-2"; }
+
+.hero-box-e-1 {
+  grid-area: hero-box-e-1; }
+
+.hero-baner {
+  display: none; }
+
+.hero-box-e-2 {
+  grid-area: hero-box-e-2; }
+  @media only screen and (min-width: 1024px) {
+    .hero-box-e-2 h3 {
+      background-color: #000;
+      height: 95px;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      margin-top: -105px;
+      font-size: 70px; } }
+
+@media only screen and (min-width: 1024px) {
+  .baner-img {
+    height: 500px;
+    background-image: url(../../media/scott-webb.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; } }
