--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -8,7 +8,13 @@
                 <p>Company</p>
             </div>
             <div class="footer-logo-box">
-                <p>Community Science Museum</p>
+                <a href="/index.html">
+                    <img
+                      src="../media/logo.png"
+                      alt="Community Science Museum logo, a C"
+                      class="nav-logo"
+                    />
+                </a>
             </div>
             <div class="footer-box-3">
                 <p>Help desk</p>
@@ -18,8 +24,7 @@
             </div>
           </div>
     </div>
-    <div class="bottom-footer">
-        <div class="footer-border"></div>
-        <p class="footer-bottom-box">Community Science Museum</p>
+    <div class="bottom-footer footer-border">
+            <span>&#169; Community Science Museum</span>
     </div>
 </div>
