--- a/app/src/scss/modules/_footer.scss
+++ b/app/src/scss/modules/_footer.scss
@@ -11,18 +11,8 @@
         font-weight: normal;
     }
 }
-@media #{$screen__l} {
-    .footer-border{
-        
-        border-bottom:solid #000  1px;
-        margin: 0 50px 0 50px;
-    }           
-}
-
 
 .footer-grid {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
     gap: 5px 0px;
     grid-template-areas:
       "top-footer"
@@ -35,12 +25,14 @@
   
   .bottom-footer { 
       grid-area: bottom-footer;
+      display: flex;
+      flex-flow: wrap;
+      justify-content: center;
+      padding-top: 20px;      
     }
   
 
     .footer-container-grid {
-        grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
-        grid-template-rows: 1fr;
         gap: 5px 5px;
         padding: 15px 15px;
         grid-template-areas:
@@ -63,7 +55,7 @@
             display: block; 
           }
         }
-      
+
       .footer-box-3 { 
           grid-area: footer-box-3; 
         }
@@ -71,4 +63,12 @@
       .footer-box-4 { 
           grid-area: footer-box-4; 
         }
-      
+
+
+        @media #{$screen__l} {
+            .footer-border { 
+                border-top:solid #000  1px;
+                margin: 0 50px 0 50px;
+            }           
+        }
+        
