Added body components

--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -2,10 +2,14 @@
     <div class="top-footer">
         <div class="footer-container-grid">
             <div class="footer-box-1">
-                <p>Community</p>
+                <!--<a href="https://angry-benz-cc2cea.netlify.app/">
+                    <span>Compey</span>
+                </a>-->
             </div>
             <div class="footer-box-2">
-                <p>Company</p>
+                <a href="/community.html">
+                    <span>Community</span>
+                </a>
             </div>
             <div class="footer-logo-box">
                 <a href="/index.html">
@@ -17,14 +21,20 @@
                 </a>
             </div>
             <div class="footer-box-3">
-                <p>Help desk</p>
+                <a href="/help.html">
+                    <span>Help desk</span>
+                </a>
             </div>
             <div class="footer-box-4">
-                <p>Blog</p>
+                <!--<a href="https://angry-benz-cc2cea.netlify.app/">
+                    <span>Blog</span>
+                </a>-->
             </div>
           </div>
     </div>
     <div class="bottom-footer footer-border">
+        <a href="/index.html">
             <span>&#169; Community Science Museum</span>
+        </a>
     </div>
 </div>
