--- a/app/components/nav.html
+++ b/app/components/nav.html
@@ -10,11 +10,12 @@
   </li>
   <ul>
     <li><a href="/index.html">Home</a></li>
-    <li><a href="/">Features</a></li>
-    <li><a href="/">Pricing</a></li>
-    <li><a href="/">Community</a></li>
+    <li><a href="/news.html">News</a></li>
+    <li><a href="/exhibition.html">Exhibitions</a></li>
+    <!--<li><a href="/community.html">Community</a></li>-->
+    <li><a href="/food_and_drink.html">Food & drink</a></li>
     <br />
-    <li><a href="/">Support</a></li>
+    <li><a href="/shop.html">Shop</a></li>
   </ul>
 </div>
 <span class="openNav" onclick="openSideNav()" onkeyup="openSideNav()"
