--- a/app/components/header.html
+++ b/app/components/header.html
@@ -9,7 +9,9 @@
               class="nav-logo"
             />
           </a>
-          <h1>Community Science Museum</h1>
+          <a href="/index.html" class="txthederlogo">
+            <h1>Community Science Museum</h1>
+          </a>
         </div>
       </div> 
     </div>
