--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -5,5 +5,26 @@
 @import "modules/header";
 @import "modules/footer";
 @import "modules/hero-e";
-
-
+@import "modules/body-b";
+@import "modules/body-e";
+@import "modules/body-f";
+@import "modules/body-g";
+@import "modules/testimonal-body-d";
+@import "modules/body-signup-c";
+@import "modules/sub-page-body-g";
+@import "modules/sub-page-body-d";
+@import "modules/sub-page-body-c";
+@import "modules/sub-page-body-a";
+@import "modules/sub-page-body-b";
+@import "modules/sub-page-body-e";
+@import "modules/sub-page-body-f";
+@import "modules/sub-page-body-h";
+@import "modules/sub-page-hero-x";
+@import "modules/sub-page-hero-x-1";
+@import "modules/sub-shop-hero-x-2";
+@import "modules/sub-shop-hero-x-3";
+@import "modules/sub-shop-body";
+@import "modules/sub-shop-body-2";
+@import "modules/sub-page-form";
+@import "modules/sub-page-form-1";
+@import "modules/help-box";
