--- a/app/src/scss/modules/_defalt.scss
+++ b/app/src/scss/modules/_defalt.scss
@@ -15,19 +15,24 @@ $padding--l: 30px;
 $padding--s: 15px;
 $padding--xs: 5px;
 
-$font--s: 15px;
-$font--m: 23px;
+$font--s: 12px;
+$font--m: 19px;
 $font--l: 25px;
-$font--lx: 37px;
+$font--lx: 35px;
 
 main {
   flex: 1;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
 
 body {
   font-family: "Comfortaa", "Montserrat", sans-serif;
-  font-weight: 900;
+  font-weight: 100;
   margin: 0;
   min-height: 100vh;
   display: flex;
@@ -39,22 +44,21 @@ a,
 ul,
 li {
   list-style-type: none;
-}
-
-.box,
-.box-1,
-.box-2,
-.content-box {
-  display: flex;
+  text-decoration: none;
 }
 
 
-
-p, h1, h2, h3 {
-  font-size:12px;
-} 
+p,
+h1,
+h2,
+h3 {
+  font-size: $font--s;
+}
 @media #{$screen__l} {
-  p, h1, h2, h3 {
-    font-size:19px;
+  p,
+  h1,
+  h2,
+  h3 {
+    font-size: $font--m;
   }
 }
