--- a/app/src/scss/modules/_header.scss
+++ b/app/src/scss/modules/_header.scss
@@ -1,15 +1,19 @@
-
 /* Style the header */
 .header {
   margin: 10px;
   height: 65px;
 }
 
-.box-1 h1{
-    margin-top: 15px;
+.box-1 h1 {
+  margin-top: 15px;
+  color: #000;
 }
 
-.nav-logo{
-    width: 3rem;
-    height: 3rem;
+.nav-logo {
+  width: 3rem;
+  height: 3rem;
+}
+.txthederlogo:active,
+.txthederlogo:visited {
+  color: #000; 
 }
