--- a/app/src/scss/modules/_navbar.scss
+++ b/app/src/scss/modules/_navbar.scss
@@ -22,10 +22,10 @@
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 3;
+  z-index: 99999999;
   top: 0;
   right: 0;
-  background-color: #ededed;
+  background-color: #18a0fbc2;
   overflow-x: hidden;
   transition: width 0.5s;
   padding-top: 80px;
@@ -36,8 +36,8 @@
   justify-items: end;
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 25px;
-  color: #18a0fb;
+  font-size: $font--l;
+  color: #fff;
   transition: width 0.3s;
   margin: 10px;
 }
@@ -52,8 +52,7 @@
   right: 25px;
   font-size: 36px;
   margin-left: 50px;
-  color: #18a0fb;
-  background-color: #ededed;
+  color: #fff;
 }
 .nav,
 .mdSideNav {
@@ -63,6 +62,8 @@
   justify-content: flex-end;
   margin: 10px;
   margin-top: -80px;
+  margin-left: auto;
+  width: 30px;
 }
 
 @media #{$screen__l} {
