removed localhost url from cta

--- a/app/components/body-components/testimonial-body-d.html
+++ b/app/components/body-components/testimonial-body-d.html
@@ -18,27 +18,27 @@
     </p>
   </div>
   <div class="testimonial-body-d-box-1">
-    <a href="http://localhost/exhibition.html#section-box1">
+    <a href="/exhibition.html#section-box1">
       <button class="testimonial-body-d-button">Cosmology</button>
     </a>
   </div>
   <div class="testimonial-body-d-box-2">
-    <a href="http://localhost/exhibition.html#section-box2">
+    <a href="/exhibition.html#section-box2">
       <button class="testimonial-body-d-button">Evolution</button>
     </a>
   </div>
   <div class="testimonial-body-d-box-3">
-    <a href="http://localhost/exhibition.html#section-box3">
+    <a href="/exhibition.html#section-box3">
       <button class="testimonial-body-d-button">Robotics and AI</button>
     </a>
   </div>
   <div class="testimonial-body-d-box-4">
-    <a href="http://localhost/exhibition.html#section-box4">
+    <a href="/exhibition.html#section-box4">
       <button class="testimonial-body-d-button">Biology and Medicine</button>
     </a>
   </div>
   <div class="testimonial-body-d-box-5">
-    <a href="http://localhost/exhibition.html#section-box5">
+    <a href="/exhibition.html#section-box5">
       <button class="testimonial-body-d-button">Ecology</button>
     </a>
   </div>
