--- a/app/components/body-components/testimonial-body-d.html
+++ b/app/components/body-components/testimonial-body-d.html
@@ -34,7 +34,7 @@
   </div>
   <div class="testimonial-body-d-box-4">
     <a href="/exhibition.html#section-box4">
-      <button class="testimonial-body-d-button">Biology and Medicine</button>
+      <button class="testimonial-body-d-button">Biology & Medicine</button>
     </a>
   </div>
   <div class="testimonial-body-d-box-5">
