--- a/app/components/sub-pages/sub-page-form.html
+++ b/app/components/sub-pages/sub-page-form.html
@@ -1,4 +1,4 @@
-<form action="community-form.php" method="POST">
+<form action="community-form.php" method="POST" data-netlify="true">
   <div class="community-form-grid-container box-container">
     <div class="community-form-box hedder-box-grid-center">
       <h2>Volunteer</h2>
