--- a/app/src/scss/modules/_sub-page-body-g.scss
+++ b/app/src/scss/modules/_sub-page-body-g.scss
@@ -26,6 +26,9 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   @media #{$screen__l} {
     background-attachment: scroll;
   }
