--- a/app/src/scss/modules/_sub-shop-body.scss
+++ b/app/src/scss/modules/_sub-shop-body.scss
@@ -93,81 +93,117 @@
 
 .product-box-img {
   background-image: url("../../../media/");
+  width: 100%;
   min-height: 250px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   cursor: pointer;
 }
 
 .product-box-img-2 {
   background-image: url("../../../media/");
+  width: 100%;
   min-height: 250px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   cursor: pointer;
 }
 
 .product-box-img-3 {
   background-image: url("../../../media/");
+  width: 100%;
   min-height: 250px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   cursor: pointer;
 }
 
 .product-box-img-4 {
   background-image: url("../../../media/");
+  width: 100%;
   min-height: 250px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   cursor: pointer;
 }
 
 .product-box-img-5 {
   background-image: url("../../../media/");
+  width: 100%;
   min-height: 250px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   cursor: pointer;
 }
 
 .product-box-img-6 {
   background-image: url("../../../media/");
+  width: 100%;
   min-height: 250px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   cursor: pointer;
 }
 
 .product-box-img-7 {
   background-image: url("../../../media/");
+  width: 100%;
   min-height: 250px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   cursor: pointer;
 }
 
 .product-box-img-8 {
   background-image: url("../../../media/");
+  width: 100%;
   min-height: 250px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   cursor: pointer;
 }
 
 .product-box-img-9 {
   background-image: url("../../../media/");
+  width: 100%;
   min-height: 250px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   cursor: pointer;
 }
