--- a/app/src/scss/modules/_body-f.scss
+++ b/app/src/scss/modules/_body-f.scss
@@ -1,38 +1,39 @@
 .body-f-grid-container {
-    grid-template-areas: "body-f-box-1 body-f-box-2";
+  grid-template-areas: "body-f-box-1 body-f-box-2";
+}
+.body-f-grid-container {
+  background-color: #f5f5f5;
+}
+
+.body-f-box-2 {
+  grid-area: body-f-box-2;
+}
+
+.body-f-box-1 {
+  grid-area: body-f-box-1;
+  padding: 50px 30px;
+  text-align: justify;
+  p {
+    font-size: $font--m;
+    font-weight: 100;
   }
-  .body-f-grid-container {
-    background-color: #F5F5F5;
+  @media #{$screen__l} {
+    padding: 50px 80px;
   }
-  
-  
-  .body-f-box-2 {
-    grid-area: body-f-box-2;
+}
+
+.body-f-box-img {
+  background-image: url("../../../media/skeleton.jpg");
+  width: 100%;
+  min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  @media #{$screen__l} {
+    background-attachment: scroll;
   }
-  
-  .body-f-box-1 {
-    grid-area: body-f-box-1;
-    padding: 50px 30px;
-    text-align: justify;
-    p {
-      font-size: $font--m;
-      font-weight: 100;
-    }
-    @media #{$screen__l} {
-      padding: 50px 80px;
-    }
-  }
-  
-  .body-f-box-img {
-    background-image: url("../../../media/skeleton.jpg");
-    width: 100%;
-    min-height: 500px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    @media #{$screen__l} {
-      background-attachment: scroll;
-    }
-  }
-  
+}
