--- a/app/src/scss/modules/_hero-e.scss
+++ b/app/src/scss/modules/_hero-e.scss
@@ -12,27 +12,28 @@
 .hero-box-e-2 {
   grid-area: hero-box-e-2;
 
-    h3 {
-      background-color: #18a0fbc2;
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      margin-top: -105px;
-      font-size: $font--lx;
-      @media #{$screen__l} {
+  h3 {
+    background-color: #18a0fbc2;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    margin-top: -105px;
+    font-size: $font--lx;
+    @media #{$screen__l} {
       font-size: 70px;
-      }
     }
   }
+}
 
-
-
-  .baner-img {
-    height: 500px;
-    background-image: url(../../media/scott-webb.jpg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-
+.baner-img {
+  width: 100%;
+  height: 500px;
+  background-image: url(../../media/scott-webb.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+}
