--- a/app/src/scss/modules/_sub-page-body-d.scss
+++ b/app/src/scss/modules/_sub-page-body-d.scss
@@ -1,33 +1,35 @@
 .sub-page-body-d-grid-container {
-    grid-template-areas: "sub-page-body-d-box-1 sub-page-body-d-box-2";
+  grid-template-areas: "sub-page-body-d-box-1 sub-page-body-d-box-2";
+}
+
+.sub-page-body-d-box-1 {
+  grid-area: sub-page-body-d-box-1;
+}
+
+.sub-page-body-d-box-2 {
+  grid-area: sub-page-body-d-box-2;
+  padding: 20px 30px;
+  @media #{$screen__l} {
+    padding: 50px 80px;
   }
-  
-  .sub-page-body-d-box-1 {
-    grid-area: sub-page-body-d-box-1;
+  p {
+    font-size: $font--m;
+    font-weight: 100;
   }
-  
-  .sub-page-body-d-box-2 {
-    grid-area: sub-page-body-d-box-2;
-    padding: 20px 30px;
-    @media #{$screen__l} {
-      padding: 50px 80px;
-    }
-    p {
-      font-size: $font--m;
-      font-weight: 100;
-    }
+}
+
+.sub-page-body-d-box-img {
+  background-image: url("../../../media/roberto-nickson.jpg");
+  width: 100%;
+  min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  @media #{$screen__l} {
+    background-attachment: scroll;
   }
-  
-  .sub-page-body-d-box-img {
-    background-image: url("../../../media/roberto-nickson.jpg");
-    width: 100%;
-    min-height: 500px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    @media #{$screen__l} {
-      background-attachment: scroll;
-    }
-  }
-  
+}
