--- a/app/src/scss/modules/_body-e.scss
+++ b/app/src/scss/modules/_body-e.scss
@@ -23,7 +23,8 @@
   background-image: url("../../../media/samuel-zeller.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  //background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
