--- a/app/src/scss/modules/_body-f.scss
+++ b/app/src/scss/modules/_body-f.scss
@@ -26,7 +26,8 @@
   background-image: url("../../../media/skeleton.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  //background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
