--- a/app/src/scss/modules/_sub-page-body-g.scss
+++ b/app/src/scss/modules/_sub-page-body-g.scss
@@ -22,7 +22,8 @@
   background-image: url("../../../media/luke-ellis-craven.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  //background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
