--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -412,6 +412,7 @@ h3 {
   width: 100%;
   height: 500px;
   background-image: url(../../media/scott-webb.jpg);
+  object-fit: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
@@ -561,6 +562,7 @@ h3 {
   width: 100%;
   min-height: 500px;
   background-attachment: fixed;
+  object-fit: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -595,6 +597,7 @@ h3 {
   background-image: url("../../../media/skeleton.jpg");
   width: 100%;
   min-height: 500px;
+  object-fit: cover;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -627,6 +630,7 @@ h3 {
   background-image: url("../../../media/people.jpg");
   width: 100%;
   min-height: 500px;
+  object-fit: cover;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -792,6 +796,7 @@ h3 {
   background-image: url("../../../media/luke-ellis-craven.jpg");
   width: 100%;
   min-height: 500px;
+  object-fit: cover;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -823,6 +828,7 @@ h3 {
   background-image: url("../../../media/roberto-nickson.jpg");
   width: 100%;
   min-height: 500px;
+  object-fit: cover;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -854,6 +860,7 @@ h3 {
   background-image: url("../../../media/scientific.jpg");
   width: 100%;
   min-height: 500px;
+  object-fit: cover;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -885,6 +892,7 @@ h3 {
   background-image: url("../../../media/william-bout.jpg");
   width: 100%;
   min-height: 500px;
+  object-fit: cover;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -916,6 +924,7 @@ h3 {
   background-image: url("../../../media/skeleton.jpg");
   width: 100%;
   min-height: 500px;
+  object-fit: cover;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -947,6 +956,7 @@ h3 {
   background-image: url("../../../media/people.jpg");
   width: 100%;
   min-height: 500px;
+  object-fit: cover;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -978,6 +988,7 @@ h3 {
   background-image: url("../../../media/samuel-zeller.jpg");
   width: 100%;
   min-height: 500px;
+  object-fit: cover;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -1009,6 +1020,7 @@ h3 {
   background-image: url("../../../media/scientific.jpg");
   width: 100%;
   min-height: 500px;
+  object-fit: cover;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
