--- a/app/src/scss/modules/_body-f.scss
+++ b/app/src/scss/modules/_body-f.scss
@@ -26,8 +26,9 @@
   background-image: url("../../../media/skeleton.jpg");
   width: 100%;
   min-height: 500px;
-  //background-attachment: fixed;
-  background-attachment: scroll;
+  object-fit: cover;
+  background-attachment: fixed;
+  //background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
