--- a/app/src/scss/modules/_hero-e.scss
+++ b/app/src/scss/modules/_hero-e.scss
@@ -29,8 +29,9 @@
   width: 100%;
   height: 500px;
   background-image: url(../../media/scott-webb.jpg);
-  //background-attachment: fixed;
-  background-attachment: scroll;
+  object-fit: cover;
+  background-attachment: fixed;
+  //background-attachment: scroll;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
