--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -412,7 +412,7 @@ h3 {
   width: 100%;
   height: 500px;
   background-image: url(../../media/scott-webb.jpg);
-  background-attachment: fixed;
+  background-attachment: fixed, scroll;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -560,7 +560,7 @@ h3 {
   background-image: url("../../../media/samuel-zeller.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -595,7 +595,7 @@ h3 {
   background-image: url("../../../media/skeleton.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -627,7 +627,7 @@ h3 {
   background-image: url("../../../media/people.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -792,7 +792,7 @@ h3 {
   background-image: url("../../../media/luke-ellis-craven.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -823,7 +823,7 @@ h3 {
   background-image: url("../../../media/roberto-nickson.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -854,7 +854,7 @@ h3 {
   background-image: url("../../../media/scientific.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -885,7 +885,7 @@ h3 {
   background-image: url("../../../media/william-bout.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -916,7 +916,7 @@ h3 {
   background-image: url("../../../media/skeleton.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -947,7 +947,7 @@ h3 {
   background-image: url("../../../media/people.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -978,7 +978,7 @@ h3 {
   background-image: url("../../../media/samuel-zeller.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1009,7 +1009,7 @@ h3 {
   background-image: url("../../../media/scientific.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
