--- a/app/src/scss/modules/_hero-e.scss
+++ b/app/src/scss/modules/_hero-e.scss
@@ -30,7 +30,8 @@
   height: 500px;
   background-image: url(../../media/scott-webb.jpg);
   //background-attachment: fixed;
-  background-attachment: scroll;
+  //background-attachment: scroll;
+  background-attachment: fixed, scroll;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
