--- a/app/src/scss/modules/_body-g.scss
+++ b/app/src/scss/modules/_body-g.scss
@@ -23,8 +23,8 @@
     background-image: url("../../../media/people.jpg");
     width: 100%;
     min-height: 500px;
-    //background-attachment: fixed;
-    background-attachment: scroll;
+    background-attachment: fixed;
+    //background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
