--- a/app/src/scss/modules/_sub-page-body-d.scss
+++ b/app/src/scss/modules/_sub-page-body-d.scss
@@ -22,8 +22,8 @@
   background-image: url("../../../media/roberto-nickson.jpg");
   width: 100%;
   min-height: 500px;
-  //background-attachment: fixed;
-  background-attachment: scroll;
+  background-attachment: fixed;
+  //background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
